Bloqueando acceso sneaky a las páginas

--- a/webapp/privado/trabajador/Administracion.xhtml
+++ b/webapp/privado/trabajador/Administracion.xhtml
@@ -12,6 +12,7 @@
 
             <ui:define name="content">
 
+                        <f:event type="preRenderView" listener="#{plantillaController.verificarYMostrarTrabajador()}"></f:event>
 
 
                 <div class="p-grid p-jc-center p-mt-6">
