--- a/webapp/privado/adminsitrador/Administracion.xhtml
+++ b/webapp/privado/adminsitrador/Administracion.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
@@ -12,6 +13,7 @@
             <ui:define name="content">
 
                 
+        <f:event type="preRenderView" listener="#{plantillaController.verificarYMostrarAdmin()}"></f:event>
 
                 <div class="p-grid p-jc-center p-mt-6">
                     <div class="p-col-10" style="">
