--- a/webapp/privado/adminsitrador/EditarTrabajador.xhtml
+++ b/webapp/privado/adminsitrador/EditarTrabajador.xhtml
@@ -3,15 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
+        <f:event type="preRenderView" listener="#{plantillaController.verificarYMostrarAdmin()}"></f:event>
 
         <ui:composition template="../../WEB-INF/template/plantillaIkea.xhtml">
 
             <ui:define name="content">
 
-                
+                        <f:event type="preRenderView" listener="#{plantillaController.verificarYMostrarAdmin()}"></f:event>
+
 
                 <div class="p-grid p-jc-center p-mt-6">
                     <div class="p-col-10" style="">
